[package]
name = "icecast-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.6.0"
base64 = "0.22.1"
bytes = "1.11.1"
crossbeam-utils = "0.8.16"
dashmap = "6.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
